--- a/package.json
+++ b/package.json
@@ -91,7 +91,8 @@
     "node": "8.x || 9.x || 10.x || 11.x"
   },
   "jest": {
-    "testRegex": "/scripts/jest/dont-run-jest-directly\\.js$"
+    "testRegex": "/scripts/jest/dont-run-jest-directly\\.js$",
+    "testEnvironment": "node"
   },
   "scripts": {
     "build": "node ./scripts/rollup/build.js",
